--- a/ServDev2.yaml
+++ b/ServDev2.yaml
@@ -22,41 +22,12 @@ player:
       pvp:
         chance: 0
         amount: 0
-  
 enemies:
-  is_aggro_passive: false
-  hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
-  hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
-  attack_speed_wait_multiplier: 0.99 #wait more if higher
-  walking_speed: 1.1
-  corrupted_ench_chance: 10 #5 
+  corrupted_ench_chance: 10 #5
   boss_upgrade:
     max_in_bosses_open_world: 1
     chance: 10
     spawn_cool_down_mins: 60 # can only happen every x minutes
-  # general stats
-  random_buffs_chance: 10 #1
-  random_buffs_amounts: 1 #1
-  dodge_chance_additional_percentage: 5.0
-  critical_chance_additional_percentage: 5.0
-  defense_multiplier: 2.0
-  damage_multiplier: 1.5
-  max_hp_multiplier: 2.0
-  rewards:
-    gold_drop_multiplier: 1.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
-    drop_more_exp: 1.5
-    drop_more_items: 1.15 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
-    extra_material: 1 # added to the result and after server event
-    new_item:
-      RNG_mod: true
-      mod_extra_luck: 10
-      guaranteed_mods_number: 1
-      RNG_upgrade: true
-      upgrade_extra_luck: 10.0
-      RNG_enchant: true
-      enchant_extra_luck: 0.0
-      RNG_quality: true
-      quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   attack_modifiers:
     burn:
       spawn_chance: -1
@@ -94,14 +65,57 @@ enemies:
       spawn_chance: -1
       time: 5.0
       cast_chance: 20.0
+  normal:
+    stats:
+      damage_multiplier: 1.5
+      max_hp_multiplier: 2.0
+      defense_multiplier: 2.0
+      hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
+      hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
+      dodge_chance_additional_percentage: 5.0
+      critical_chance_additional_percentage: 5.0
+      attack_speed_wait_multiplier: 0.99 #wait more if higher
+      walking_speed: 1.1
+    spawn_settings:
+      random_buffs_chance: 10 #1
+      random_buffs_amounts: 1 #1    
+      is_aggro_passive: false
+      min_level_required: 0 # only elites use this so far
+      spawn_chance: 0 #only elites use this so far
+      max_aggro_range_multiplier: 1.0 # only elites use this so far
+    rewards:
+      gold_drop_multiplier: 1.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
+      drop_more_exp: 1.5
+      drop_more_items: 1.15 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
+      extra_material: 1 # added to the result and after server event
+      new_item:
+        RNG_mod: true
+        mod_extra_luck: 10
+        guaranteed_mods_number: 1
+        RNG_upgrade: true
+        upgrade_extra_luck: 10.0
+        RNG_enchant: true
+        enchant_extra_luck: 0.0
+        RNG_quality: true
+        quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   boss:
-    random_buffs_chance: 30 #1
-    random_buffs_amounts: 1 #1
-    critical_chance_additional_percentage: 15.0
-    dodge_chance_additional_percentage: 10.0
-    defense_multiplier: 1.25
-    damage_multiplier: 1.375
-    max_hp_multiplier: 2.0
+    stats:
+      damage_multiplier: 1.375
+      max_hp_multiplier: 2.0
+      defense_multiplier: 1.25
+      hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
+      hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
+      dodge_chance_additional_percentage: 10.0
+      critical_chance_additional_percentage: 15.0
+      attack_speed_wait_multiplier: 1.0 #wait more if higher
+      walking_speed: 1.0
+    spawn_settings:
+      random_buffs_chance: 30 #1
+      random_buffs_amounts: 1 #1
+      is_aggro_passive: true
+      min_level_required: 0 # only elites use this so far
+      spawn_chance: 0 #only elites use this so far
+      max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
       gold_drop_multiplier: 1.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
       drop_more_exp: 1.5
@@ -118,15 +132,23 @@ enemies:
         RNG_quality: true
         quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   elites:
-    min_level_required: 100 #100
-    spawn_chance: 10.0 #1.0
-    walking_speed_multiplier: 1.0
-    max_aggro_range_multiplier: 1.0
-    critical_chance_additional_percentage: 0.0
-    dodge_chance_additional_percentage: 0.0
-    defense_multiplier: 1.5
-    damage_multiplier: 1.0
-    max_hp_multiplier: 3.0
+    stats:
+      damage_multiplier: 1.0
+      max_hp_multiplier: 3.0
+      defense_multiplier: 1.5
+      hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
+      hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
+      dodge_chance_additional_percentage: 0.0
+      critical_chance_additional_percentage: 0.0
+      attack_speed_wait_multiplier: 1.0 #wait more if higher
+      walking_speed: 1.0
+    spawn_settings:
+      random_buffs_chance: 1.0
+      random_buffs_amounts: 1
+      is_aggro_passive: true
+      min_level_required: 100 # only elites use this so far
+      spawn_chance: 10.0 #only elites use this so far
+      max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
       gold_drop_multiplier: 2.0 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
       drop_more_exp: 3.5
@@ -142,4 +164,3 @@ enemies:
         enchant_extra_luck: 10.0
         RNG_quality: true
         quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
-        
