--- a/ServDev4.yaml
+++ b/ServDev4.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 1
+  version: 4
   id: 4
   name: ServDev4
   is_test_server: true
@@ -22,41 +22,12 @@ player:
       pvp:
         chance: 0
         amount: 0
-  
 enemies:
-  is_aggro_passive: false
-  hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
-  hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
-  attack_speed_wait_multiplier: 0.97 #wait more if higher
-  walking_speed: 1.18
   corrupted_ench_chance: 50 #5 
   boss_upgrade:
     max_in_bosses_open_world: 5
     chance: 30
     spawn_cool_down_mins: 60 # can only happen every x minutes
-  # general stats
-  random_buffs_chance: 100 #1
-  random_buffs_amounts: 2 #1
-  dodge_chance_additional_percentage: 0.0
-  critical_chance_additional_percentage: 0.0
-  defense_multiplier: 8.0
-  damage_multiplier: 4.0
-  max_hp_multiplier: 4.5
-  rewards:
-    gold_drop_multiplier: 2.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
-    drop_more_exp: 3.5
-    drop_more_items: 2.0 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
-    extra_material: 3 # added to the result and after server event
-    new_item:
-      RNG_mod: true
-      mod_extra_luck: 50
-      guaranteed_mods_number: 1
-      RNG_upgrade: true
-      upgrade_extra_luck: 40.0
-      RNG_enchant: true
-      enchant_extra_luck: 20.0
-      RNG_quality: true
-      quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   attack_modifiers:
     burn:
       spawn_chance: 3
@@ -94,14 +65,57 @@ enemies:
       spawn_chance: 1
       time: 5.0
       cast_chance: 20.0
+  normal:
+    stats:
+      damage_multiplier: 4.0
+      max_hp_multiplier: 4.5
+      defense_multiplier: 8.0
+      hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
+      hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
+      dodge_chance_additional_percentage: 0.0
+      critical_chance_additional_percentage: 0.0
+      attack_speed_wait_multiplier: 0.97 #wait more if higher
+      walking_speed: 1.18
+    spawn_settings:
+      random_buffs_chance: 100 #1
+      random_buffs_amounts: 2 #1    
+      is_aggro_passive: false
+      min_level_required: 0 # only elites use this so far
+      spawn_chance: 0 #only elites use this so far
+      max_aggro_range_multiplier: 1.0 # only elites use this so far
+    rewards:
+      gold_drop_multiplier: 2.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
+      drop_more_exp: 3.5
+      drop_more_items: 2.0 #1.0-2.0 ideal Multiplier of current drop chances, if 2.0 then: drop chance of 0.1% will be 0.2%
+      extra_material: 3 # added to the result and after server event
+      new_item:
+        RNG_mod: true
+        mod_extra_luck: 50
+        guaranteed_mods_number: 1
+        RNG_upgrade: true
+        upgrade_extra_luck: 40.0
+        RNG_enchant: true
+        enchant_extra_luck: 20.0
+        RNG_quality: true
+        quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   boss:
-    random_buffs_chance: 100 #1
-    random_buffs_amounts: 3 #1
-    critical_chance_additional_percentage: 40.0
-    dodge_chance_additional_percentage: 35.0
-    defense_multiplier: 3.25
-    damage_multiplier: 3.375
-    max_hp_multiplier: 8.0
+    stats:
+      damage_multiplier: 3.375
+      max_hp_multiplier: 8.0
+      defense_multiplier: 3.25
+      hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
+      hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
+      dodge_chance_additional_percentage: 35.0
+      critical_chance_additional_percentage: 40.0
+      attack_speed_wait_multiplier: 1.0 #wait more if higher
+      walking_speed: 1.0
+    spawn_settings:
+      random_buffs_chance: 100 #1
+      random_buffs_amounts: 3 #1
+      is_aggro_passive: false
+      min_level_required: 0 # only elites use this so far
+      spawn_chance: 0 #only elites use this so far
+      max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
       gold_drop_multiplier: 4.5 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
       drop_more_exp: 4.5
@@ -118,15 +132,23 @@ enemies:
         RNG_quality: true
         quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
   elites:
-    min_level_required: 1 #100
-    spawn_chance: 20 #1.0
-    walking_speed_multiplier: 1.1
-    max_aggro_range_multiplier: 2.0
-    critical_chance_additional_percentage: 10.0
-    dodge_chance_additional_percentage: 15.0
-    defense_multiplier: 1.5
-    damage_multiplier: 1.10
-    max_hp_multiplier: 3.0
+    stats:
+      damage_multiplier: 1.10
+      max_hp_multiplier: 3.0
+      defense_multiplier: 1.5
+      hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
+      hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
+      dodge_chance_additional_percentage: 15.0
+      critical_chance_additional_percentage: 10.0
+      attack_speed_wait_multiplier: 1.0 #wait more if higher
+      walking_speed: 1.1
+    spawn_settings:
+      random_buffs_chance: 1.0
+      random_buffs_amounts: 1
+      is_aggro_passive: true
+      min_level_required: 80 # only elites use this so far
+      spawn_chance: 1.0 #only elites use this so far
+      max_aggro_range_multiplier: 2.0 # only elites use this so far
     rewards:
       gold_drop_multiplier: 3.0 # Random.Range(10, 20 + (EnemyStats.Level / 2) + 1)
       drop_more_exp: 3.5
@@ -142,4 +164,3 @@ enemies:
         enchant_extra_luck: 10.0
         RNG_quality: true
         quality_extra_luck: 0.0 # Increasing this variable effectively widens the range for which the conditions for higher-tier items are met.
-        
