--- a/dev/global_client_settings.yaml
+++ b/dev/global_client_settings.yaml
@@ -10,17 +10,17 @@ admin_team:
     - zelp
 mod_team:
   chat:
-    text_color: "#A020F0"
+    text_color: "#ff8000"
     icon_set: skill_iconset
-    index: 382
+    index: 101
   members:
     - mod1
     - dude1
 tutor_team:
   chat:
-    text_color: "#CF9FFF"
+    text_color: "#e6cc80"
     icon_set: skill_iconset
-    index: 400
+    index: 109
   members:
     - uragus
     - meeks
