--- a/dev/instances/Abyss.yaml
+++ b/dev/instances/Abyss.yaml
@@ -1,7 +1,7 @@
 server:
   version: 3
   id: 1
-  name: Abyss
+  name: N/A #Server name is overwritten by the instance manager
   is_test_server: true
   auto_restart: 700
   player_rebirth_required: 0
@@ -11,6 +11,7 @@ server:
     is_intance: true
     time_to_complete: 120
     time_to_first_player: 10
+    map: abyss
   pvp:
     enabled: false
     gvg_event:
