--- a/dev/ServDev1.yaml
+++ b/dev/ServDev1.yaml
@@ -7,6 +7,11 @@ server:
   player_rebirth_required: 0
   player_limit: 50
   type: Normal
+  intance_details:
+    is_intance: false
+    time_to_complete: 500
+    time_to_first_player: 400
+    map: openworld
   pvp:
     enabled: false
     gvg_event:
