--- a/dev/instances/abyss-te.yaml
+++ b/dev/instances/abyss-te.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 2
+  version: 3
   id: 1
   name: N/A #Server name is overwritten by the instance manager
   is_test_server: true
@@ -11,13 +11,13 @@ server:
     allow_instance_request: false
     is_intance: true
     time_to_complete: 1200
-    time_to_first_player: 120
+    time_to_first_player: 300
     map: abyss
-    base_tier_scaling_multiplier: 0.05 # Defense_str, Defense_int, Damage_str, Damage_int are multiplied by this and tier
-    critical_chance_per_tier: 0.1 # multiplied by tier and added
-    dodge_chance_per_tier: 0.1 # multiplied by tier and added
+    base_tier_scaling_multiplier: 0.015 # Defense_str, Defense_int, Damage_str, Damage_int are multiplied by this and tier
+    critical_chance_per_tier: 0.05 # multiplied by tier and added
+    dodge_chance_per_tier: 0.015 # multiplied by tier and added
     hp_regen_per_tier: 0.02 # multiplied by tier and added
-    max_hp_tier_scaling_multiplier: 0.10 # MaxHP multiplied by this and tier
+    max_hp_tier_scaling_multiplier: 0.015 # MaxHP multiplied by this and tier
   pvp:
     enabled: false
     gvg_event:
@@ -43,39 +43,39 @@ enemies:
     spawn_cool_down_mins: 60 # can only happen every x minutes
   attack_modifiers:
     burn:
-      spawn_chance: -1
+      spawn_chance: 3
       time: 10.0
       cast_chance: 20
       power: 2 # x times the monster normal hit before applying player defenses
     bleed:
-      spawn_chance: -1
+      spawn_chance: 3
       time: 10.0
       cast_chance: 20
       power: 2 # x times the monster normal hit before applying player defenses
     poison:
-      spawn_chance: -1
+      spawn_chance: 3
       time: 10.0
       cast_chance: 20
       power: 2 # x times the monster hit before applying player defenses
     aoe_poison:
-      spawn_chance: -1
+      spawn_chance: 3
       time: 10.0
       cast_chance: 20
       power: 2 # x times the monster hit before applying player defenses
     stun:
-      spawn_chance: -1
+      spawn_chance: 1
       time: 5.0
       cast_chance: 20.0
     lock_potion:
-      spawn_chance: -1
+      spawn_chance: 1
       time: 10.0
       cast_chance: 20.0
     slow:
-      spawn_chance: -1
+      spawn_chance: 3
       time: 5.0
       cast_chance: 20.0
     confusion:
-      spawn_chance: -1
+      spawn_chance: 1
       time: 5.0
       cast_chance: 20.0
   normal:
@@ -151,20 +151,20 @@ enemies:
   elites:
     stats:
       damage_multiplier: 1.0
-      max_hp_multiplier: 1.0
+      max_hp_multiplier: 3.0
       defense_multiplier: 1.0
       hp_regen_per_cycle_percentage: 1.0 # percentage of max_hp regens every hp_regen_cycle_time
       hp_regen_cycle_time: 2 # hp regen happens every hp_regen_cycle_time
       dodge_chance_additional_percentage: 0.0
       critical_chance_additional_percentage: 0.0
       attack_speed_wait_multiplier: 1.0 #wait more if higher
-      walking_speed: 1.0
+      walking_speed: 0.8
     spawn_settings:
       random_buffs_chance: 1.0
       random_buffs_amounts: 1
-      is_aggro_passive: true
-      min_level_required: 80 # only elites use this so far
-      spawn_chance: 1.0 #only elites use this so far
+      is_aggro_passive: false
+      min_level_required: 0 # only elites use this so far
+      spawn_chance: 5.0 #only elites use this so far
       max_aggro_range_multiplier: 1.0 # only elites use this so far
     rewards:
       gold_drop_chance: 80.0
