--- a/live/ServNight1.yaml
+++ b/live/ServNight1.yaml
@@ -8,7 +8,7 @@ server:
   player_rebirth_required: 20
   type: Nightmare
   intance_details:
-    allow_instance_request: true
+    allow_instance_request: false
     is_intance: false
     time_to_complete: 500
     time_to_first_player: 400
