--- a/live/ServHard1.yaml
+++ b/live/ServHard1.yaml
@@ -8,7 +8,7 @@ server:
   player_rebirth_required: 10
   type: Hard
   intance_details:
-    allow_instance_request: false
+    allow_instance_request: true
     is_intance: false
     time_to_complete: 500
     time_to_first_player: 400
