--- a/live/global_client_settings.yaml
+++ b/live/global_client_settings.yaml
@@ -9,17 +9,18 @@ admin_team:
     - alkanov
     - zelp
     - mod1
+    - uragus
 mod_team:
   chat:
     text_color: "#ff8000"
     icon_set: skill_iconset
     index: 101
   members:
-    - alkanov1
+    - alkanov
 tutor_team:
   chat:
     text_color: "#e6cc80"
     icon_set: skill_iconset
     index: 109
   members:
-    - uragus
+    - alkanov
