--- a/dev/ServDev3.yaml
+++ b/dev/ServDev3.yaml
@@ -2,7 +2,7 @@ server:
   version: 1
   id: 3
   name: ServDev3
-  is_test_server: true
+  is_test_server: false
   auto_restart: 284000
   player_rebirth_required: 10
   player_limit: 30
