--- a/dev/Market.yaml
+++ b/dev/Market.yaml
@@ -1,5 +1,5 @@
 server:
-  version: 1
+  version: 2
   id: 1
   name: Market
   is_test_server: true
@@ -7,6 +7,7 @@ server:
   player_rebirth_required: 0
   player_limit: 50
   type: Market
+  spawn_broker: true
   intance_details:
     allow_instance_request: false
     is_intance: false
